some minor changes. - Carousel now working - Nav is still broken - Something off with app.scss connecting to bootstrap file. Still trying to solve it. - Build Error ( ERROR in ./src/scss/app.scss (./node_modules/css-loader!./node_modules/postcss-loader/lib??ref--4-2!./node_modules/sass-loader/lib/loader.js!./src/scss/app.scss) Module build failed (from ./node_modules/sass-loader/lib/loader.js):
@import "../node-modules/bootstrap/scss/bootstrap.scss";
^
      File to import not found or unreadable:
../node-modules/bootstrap/scss/bootstrap.scss.
      in
C:\Users\MKalthoum\Documents\sites\Sadah\bootstrap-webpack\src\scss\app.scss
(line 3, column 1)
 @ ./src/scss/app.scss 2:14-178
 @ ./src/app.js)

--- a/bootstrap-webpack/src/scss/app.scss
+++ b/bootstrap-webpack/src/scss/app.scss
@@ -1,3 +1,5 @@
 //Bootstrap variables import
 
-@import "~bootstrap/scss/bootstrap";
+@import "../node-modules/bootstrap/scss/bootstrap.scss";
+@import '~bootstrap/scss/navbar.scss';
+@import '~bootstrap/scss/nav.scss';
