--- a/Playground/app/styles/partials/_hero-unit.scss
+++ b/Playground/app/styles/partials/_hero-unit.scss
@@ -4,7 +4,7 @@
     font-weight: 200;
     line-height: 30px;
     color: white;
-    background-color: purple;
+    background-color: black;
     border-radius: 6px;
     padding: 60px;
     box-shadow: -15px 15px #333;
