Lots of changes! - Create a universal nav across all pages. - Boilerplate - HTML 5 implemented - Blog page main scc - Bolierplate page main scss - Boilerplate page created - Styling of mobile responsive for blog posts on boilerplate page - clean up

--- a/Playground/app/styles/boilerplate.scss
+++ b/Playground/app/styles/boilerplate.scss
@@ -2,5 +2,5 @@
 // endbower
 
 @import "base/_base";
-@import "partials/_hero-unit";
 @import "partials/_navbar";
+@import "partials/_post-listing";
