--- a/Playground/app/styles/base/_base.scss
+++ b/Playground/app/styles/base/_base.scss
@@ -1,16 +1,32 @@
 ul {
     line-height: 1.5em;
   }
-  
+
   .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
   }
-  
+
   body {
-    background: #fafafa;
+    background: #fff;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #333;
+      line-height: 20px;
+
   }
+h2 {
+  line-height: 25px;
+}
+  article, aside, details, figcaption, figure, footer, header,
+   hgroup, menu, nav, section {
+     display: block;
+    }
+    p {
+      background: #fff;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      color: #333;
+        line-height: 20px;
+
+    }
